# cnc-web

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md
.github/workflows/: ci.yml
browser/engine/: CMakeLists.txt
browser/engine/include/: cnc_web.h  cnc_web_protocol.h
browser/engine/src/: backend.cpp  backend.h  classic_surface.cpp  classic_surface.h  content_preflight.cpp  content_preflight.h  determinism.cpp  determinism.h  protocol.cpp  protocol.h  static_map_delta.cpp  static_map_delta.h  td_backend.cpp  td_clock_compat.h  td_platform_compat.h  td_save_state.cpp  td_save_state.h  web_api.cpp  wwkeyboard_web.cpp
browser/engine/tests/: abi_header_c_test.c  classic_surface_test.cpp  content_preflight_test.cpp  determinism_test.cpp  mock_backend.cpp  static_map_delta_test.cpp  td_legacy_input_guards_test.cpp  td_save_state_test.cpp  web_api_test.cpp
cmake/toolchains/: Emscripten.cmake
docs/: browser-architecture.md  browser-performance-gates.md  classic-freeware.md  content-policy.md  implementation-status.md  owned-content-acceptance.md  staging-deployment.md
scripts/: build-classic-freeware.sh  check-no-retail-content.sh  run-owned-content-acceptance.sh  smoke-web-engine.mjs  verify-owned-content-package.py  verify-runtime-performance-report.py
scripts/tests/: test-owned-content-acceptance.sh  test_verify_owned_content_package.py
tools/content-packer/: Cargo.toml  NOTICE.md  README.md
tools/content-packer/docs/: audio-v1.md  cncweb-v1.md  meg-format.md  mix-format.md  runtime-catalog-v1.md
tools/content-packer/fixtures/: audio-v1.example.json  browser-package-profile-v1.json  manifest-v1.example.json  runtime-catalog-v1.example.json
tools/content-packer/schema/: audio-v1.schema.json  classic-freeware-v1.schema.json  manifest-v1.schema.json  runtime-catalog-v1.schema.json
tools/content-packer/src/: aud.rs  audio.rs  bootstrap.rs  conversion.rs  error.rs  hash.rs  install.rs  lib.rs  main.rs  manifest.rs  meg.rs  mix.rs  package.rs  path.rs  resolution.rs
tools/content-packer/tests/: content_pipeline.rs
web/: README.md  index.html  package.json  performance-budgets.json  playwright.classic.config.ts  playwright.config.ts  playwright.owned.config.mjs  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/e2e/: classic-freeware.cross-browser.spec.ts  classic-freeware.genuine-victory.spec.ts  classic-freeware.performance.spec.ts  classic-freeware.preflight.spec.ts  compositedPixels.ts  engineProbe.ts  owned-content.preflight.spec.ts  performance.spec.ts  runtime.spec.ts
web/public/: legal.html  manifest.webmanifest  sw.js
web/scripts/: check-bundle-budget.mjs  classic-freeware-base-url.mjs  owned-browser-preflight-env.mjs  owned-browser-preflight-reporter.mjs  run-classic-freeware-matrix.mjs  run-classic-freeware-staging.mjs  test-bundle-budget.mjs  test-classic-freeware-base-url.mjs  test-classic-freeware-deployment.mjs  test-owned-browser-preflight-env.mjs  verify-classic-freeware-deployment.mjs  verify-classic-freeware-mission-one.mjs  verify-owned-engine-lifecycle.mjs
web/src/: App.tsx  styles.css
web/src/audio/: RuntimeAudio.test.ts  RuntimeAudio.ts
web/src/bootstrap/: classicFreewareBootstrap.test.ts  classicFreewareBootstrap.ts
web/src/campaign/: tdCampaign.test.ts  tdCampaign.ts
web/src/input/: TouchController.test.ts  TouchController.ts  contextualAction.test.ts  contextualAction.ts  controlGroupHotkeys.test.ts  controlGroupHotkeys.ts  gameCommands.test.ts  gameCommands.ts  selectionModel.test.ts  selectionModel.ts
web/src/objectives/: MissionObjectives.test.tsx  MissionObjectives.tsx  missionObjectives.css
web/src/onboarding/: BattlefieldOnboarding.test.tsx  BattlefieldOnboarding.tsx  battlefieldOnboarding.css
web/src/performance/: runtimeMetrics.test.ts  runtimeMetrics.ts
web/src/production/: ProductionPanel.test.tsx  ProductionPanel.tsx  production.css  productionModel.test.ts  productionModel.ts
web/src/pwa/: registerServiceWorker.test.ts  registerServiceWorker.ts
web/src/render/: ClassicSurfaceAccumulator.test.ts  ClassicSurfaceAccumulator.ts  WebGLRenderer.test.ts  WebGLRenderer.ts  minimap.test.ts  minimap.ts  viewport.test.ts  viewport.ts
web/src/simulation/: DemoCore.ts  SimulationClient.test.ts  SimulationClient.ts  SimulationRunGate.test.ts  SimulationRunGate.ts  WasmCore.test.ts  WasmCore.ts  WasmScratchBuffers.test.ts  WasmScratchBuffers.ts  acceptanceHooks.test.ts  acceptanceHooks.ts  bufferPool.test.ts  bufferPool.ts  contentMount.test.ts  contentMount.ts  core.ts  domTelemetryCadence.test.ts  domTelemetryCadence.ts  protocol.test.ts  protocol.ts  runtimeCatalog.test.ts  runtimeCatalog.ts  runtimeLibrary.test.ts  runtimeLibrary.ts  runtimeTheater.test.ts  runtimeTheater.ts  savePolicy.test.ts  savePolicy.ts  simulation.worker.ts  snapshot.test.ts  snapshot.ts  snapshotTransferPump.test.ts  snapshotTransferPump.ts  tickTiming.test.ts  tickTiming.ts
web/src/storage/: BinaryStore.ts  ContentStore.test.ts  ContentStore.ts  OpfsBinaryStore.ts  PackageImporter.contract.test.ts  PackageImporter.test.ts  PackageImporter.ts  SaveStore.test.ts  SaveStore.ts  helpers.test.ts  helpers.ts  opfsRetry.test.ts  opfsRetry.ts  session.test.ts  session.ts
